<resources>
    <string name="app_name">SquadsRate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">SquadsRate Logo</string>
    <string name="action_settings">Settings</string>
    <string name="main_currency">Main Currency</string>
    <string name="currencies">Currencies</string>

    <string name="home">Home</string>
    <string name="calculator">Calculator</string>
    <string name="search">Search</string>
    <string name="histories">Histories</string>
    <string name="alerts">Alerts</string>

    <string name="others">Others</string>
    <string name="privacy_policy">Privacy and Policy</string>
    <string name="help_center">Help Center</string>
    <string name="about_us">About Us</string>
    <string name="ads">Ads</string>
    <string name="todo">TODO</string>
    <string name="create_alert">Create Alert</string>
    <string name="confirm">Confirm</string>
    <string name="alert_01">Alert 01</string>
    <string name="alert_name">Alert name</string>
    <string name="alert_detail">Alert Detail</string>
    <string name="created_on">Created on:</string>
    <string name="alert_name_about">Alert name:</string>
    <string name="found_on">Found on:</string>

    <string-array name="nav_titles">
        <item>Home</item>
        <item>Calculator</item>
        <item>Search</item>
        <item>Histories</item>
        <item>Alerts</item>
    </string-array>

</resources>
