<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorDarkGrey"
    tools:context=".Activity.DetailController">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <Button
                android:onClick="handleDismiss"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/left_arrow"
                android:layout_gravity="left"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/alert_detail"
                android:textColor="@color/colorWhite"
                android:textSize="19sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:padding="3dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_style_black"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:text="@string/alert_name_about"
            android:textAlignment="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:fontFamily="@font/noto_sans"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/txtAlertName"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:fontFamily="@font/noto_sans"
            android:gravity="center_vertical|start"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:padding="3dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_style_black"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:text="@string/created_on"
            android:textAlignment="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:fontFamily="@font/noto_sans"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/txtAlertDate"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:fontFamily="@font/noto_sans"
            android:gravity="center_vertical|start"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/handleHideFound"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:padding="3dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_style_black"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:text="@string/found_on"
            android:textAlignment="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:fontFamily="@font/noto_sans"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/txtFoundedDate"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:fontFamily="@font/noto_sans"
            android:gravity="center_vertical|start"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>