<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Search"
    android:background="@color/colorDarkGrey">

    <RelativeLayout
        android:id="@+id/handleSearchKeyboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/search_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/handleSearchDate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:padding="3dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/button_style_black"
                android:clickable="true"
                android:focusable="true">
                <TextView
                    android:text="December 16, 2017"
                    android:textAlignment="center"
                    android:id="@+id/txtSearchDate"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/handleSearchFirst"
                android:layout_width="match_parent"
                android:padding="3dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/button_style_black"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imgFirstFlag"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/main_currency" />
                <TextView
                    android:id="@+id/txtFirstCode"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/txtFirstName"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:fontFamily="@font/noto_sans"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/button_style_black"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imgFirstSymbol"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:padding="5dp"
                    android:contentDescription="@string/main_currency" />
                <EditText
                    android:id="@+id/txtFirstValue"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="17sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans"
                    android:padding="10dp"
                    android:background="@drawable/textbox_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:layout_marginEnd="10dp"
                    tools:ignore="Autofill,LabelFor" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_below="@id/search_first"
            android:id="@+id/handleDisplaySearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:background="@drawable/swap"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todo">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/handleSearchSecond"
                    android:layout_width="match_parent"
                    android:padding="3dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_style_black"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imgSecondFlag"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/main_currency" />
                    <TextView
                        android:id="@+id/txtSecondCode"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:fontFamily="@font/noto_sans"
                        android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/txtSecondName"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:fontFamily="@font/noto_sans"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|left"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/button_style_black"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imgSecondSymbol"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:padding="5dp"
                        android:contentDescription="@string/main_currency" />
                    <TextView
                        android:id="@+id/txtSecondValue"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textSize="17sp"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/noto_sans"
                        android:padding="10dp"
                        android:background="@drawable/textbox_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        tools:ignore="Autofill,LabelFor" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_below="@id/handleDisplaySearch"
            android:id="@+id/handleSearch"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/noto_sans"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/button_style_red">
        </Button>


    </RelativeLayout>
</FrameLayout>